; ModuleID = '/home/carl/AnghaBench/vlc/test/src/player/extr_player.c_player_on_title_selection_changed.c'
source_filename = "/home/carl/AnghaBench/vlc/test/src/player/extr_player.c_player_on_title_selection_changed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_player_title = type { i32 }
%struct.ctx = type { i32 }

@on_title_selection_changed = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.vlc_player_title*, i64, i8*)* @player_on_title_selection_changed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @player_on_title_selection_changed(i32* %0, %struct.vlc_player_title* %1, i64 %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.vlc_player_title*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.ctx*, align 8
  store i32* %0, i32** %5, align 8
  store %struct.vlc_player_title* %1, %struct.vlc_player_title** %6, align 8
  store i64 %2, i64* %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = call %struct.ctx* @get_ctx(i32* %10, i8* %11)
  store %struct.ctx* %12, %struct.ctx** %9, align 8
  %13 = load i32, i32* @on_title_selection_changed, align 4
  %14 = load i64, i64* %7, align 8
  %15 = call i32 @VEC_PUSH(i32 %13, i64 %14)
  %16 = load %struct.vlc_player_title*, %struct.vlc_player_title** %6, align 8
  ret void
}

declare dso_local %struct.ctx* @get_ctx(i32*, i8*) #1

declare dso_local i32 @VEC_PUSH(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
